mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-experss-service
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
