mongo-express-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`mongo.lpcweb.xyz`)
    kind: Rule
    services:
    - name: mongo-experss-service
      port: 8081
  tls:
    certResolver: default
    domains:
      - main: "*.lpcweb.xyz"
